components/splitpillmenu.module.css
.menu_container {
  position: sticky;
  bottom: 24px;
  text-align: center;
}

.menu {
  background: #fff;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  gap: 1rem;
  border-radius: 56px;
  padding: 12px 24px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  overflow-x: scroll;
  max-width: 100%;
  width: fit-content;
  margin: auto;
}

.alert {
  background: #D99146;
  opacity: .9;
  color: white;
  padding: 12px;
  animation: fadeInAnimation ease 1s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }

  100% {
    opacity: .9;
  }
}

.menu::-webkit-scrollbar {
  display: none;
}

.menu .divider {
  border: 1px solid #d3d3d3;
}

.menu button {
  background: transparent;
  border: none;
  white-space: nowrap;
  font-size: 12px;
  color: #142639;
}

.menu button:disabled {
  cursor: not-allowed;
}

.menu button:hover:enabled {
  cursor: pointer;
  color: gray;
}

.menu button:active:enabled {
  color: #D99146;
}

.menu .downloading {
  animation: blinker 1.5s linear infinite;
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

